--- a/app/blog/page.module.scss
+++ b/app/blog/page.module.scss
@@ -1,7 +1,14 @@
 .container {
   padding: 2rem;
+  padding-top: calc(2rem + 70px);
   max-width: 800px;
   margin: 0 auto;
   position: relative;
-  z-index: 1; /* Lower z-index */
+  z-index: 1;
+}
+
+@media (max-width: 768px) {
+  .container {
+    padding-top: calc(2rem + 60px);
+  }
 } 
