--- a/app/components/layout/Header.module.scss
+++ b/app/components/layout/Header.module.scss
@@ -1,6 +1,7 @@
 .header {
-  position: sticky;
+  position: fixed;
   top: 0;
+  left: 0;
   width: 100%;
   background: rgba(255, 255, 255, 0.75);
   z-index: 1000;
@@ -116,7 +117,7 @@
 @media (max-width: 768px) {
   .header {
     height: 60px;
-    position: sticky;
+    position: fixed;
   }
   
   .container {
